--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^2.8.1",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.3",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
@@ -19,5 +25,10 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 version",
+    "not ie <= 8"
+  ]
 }
