--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.3",
+    "@babel/parser": "^7.24.4",
     "@babel/preset-env": "^7.24.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
