--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.24.3",
+    "@babel/core": "^7.24.4",
     "@babel/parser": "^7.24.4",
     "@babel/preset-env": "^7.24.3",
+    "@babel/preset-typescript": "^7.24.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
@@ -25,7 +26,11 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "lodash": "^4.17.21",
+    "preact": "^10.20.2",
+    "vue": "^2.7.16"
   },
   "browserslist": [
     "> 1%",
